--- a/Desktop/cvpage/src/index.css
+++ b/Desktop/cvpage/src/index.css
@@ -5,9 +5,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(123, 185, 189);
+  display:flex; 
+  flex-direction:column; 
+  justify-content:space-between;
+  gap:50px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+  padding: 5px;
+  width: 15px;
+  border-radius: 10px;
+  background-color: #F5F5F5; 
+}
+
+body::-webkit-scrollbar-thumb {
+  border:3px rgb(13, 132, 132) solid;
+  border-radius: 10px;
+  background-color: rgb(19, 168, 168); 
 }
