--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -37,7 +37,7 @@
   border: 3px rgb(18, 157, 157) solid;
   color: rgb(18, 157, 157);
   font-weight: 900;
-  border-radius: 5%;
+  border-radius: 5px;
   font-size: 16px;
   margin-left: 10px;
   width:20%;
@@ -55,18 +55,19 @@
 
 .noBulletList li input{
   margin-left: 7px;
-  border-radius: 7%;
+  border-radius: 5px;
   border: 4px rgb(19, 168, 168) solid;
   height: 20px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color:rgb(19, 168, 168);
   font-weight: 700;
   width: 25%;
+  outline:none;
 }
 
 .noBulletList li textarea{
   margin-left: 4px;
-  border-radius: 4%;
+  border-radius: 10px;
   border: 4px rgb(19, 168, 168) solid;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color:rgb(19, 168, 168);
@@ -74,6 +75,7 @@
   width: 60%;
   padding: 5px;
   resize: none;
+  outline:none;
 }
 
 .noBulletList li textarea::-webkit-scrollbar {
