--- a/Desktop/cvpage/src/components/NavComp/NavComp.module.css
+++ b/Desktop/cvpage/src/components/NavComp/NavComp.module.css
@@ -9,7 +9,7 @@ nav{
   left: 0;
   top: 0;
   right: 0;
-  height: 9vh;
+  min-height: 9vh;
   align-items: center;
 }
 
@@ -17,7 +17,7 @@ nav{
   object-position: center;
   object-fit: fill;
   height: 8vh;
-  width: 50px;
+  width: 58px;
   margin-left: 5px;
   margin-right: auto;
 }
@@ -48,4 +48,17 @@ nav > ul > li{
 
 .nav_element:hover{
   text-shadow: 1px 0px 2px rgb(12, 244, 244);
+}
+
+@media only screen and (max-width: 600px) {
+  .logo{
+    width: 50px;
+  } 
+}
+
+@media only screen and (max-width: 450px) {
+  nav > ul{
+    row-gap: 1rem;
+    flex-direction: column;
+  } 
 }
