--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -1,11 +1,10 @@
-
-.personalContact{
+.personalContact {
   display: flex;
   flex-direction: column;
-  gap:10px;
+  gap: 10px;
 }
 
-.phoneNationality{
+.phoneNationality {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -13,26 +12,25 @@
   margin-right: 10px;
 }
 
-.mailMargin{
+.mailMargin {
   margin-left: 3px;
   margin-right: 10px;
 }
 
-.divRowCentered{
+.divRowCentered {
   display: flex;
   align-items: center;
 }
 
-.formMessage{
-  
+.formMessage {
 }
 
-.noBulletList{
+.noBulletList {
   list-style-type: none;
-  padding-left: 7px; 
+  padding-left: 7px;
 }
 
-.noBulletList li button{
+.noBulletList li button {
   background-color: rgb(65, 212, 212);
   border: 3px rgb(18, 157, 157) solid;
   color: rgb(18, 157, 157);
@@ -40,84 +38,84 @@
   border-radius: 5px;
   font-size: 16px;
   margin-left: 10px;
-  width:20%;
-  transition:border-width ease-in-out 0.2s;
+  width: 20%;
+  transition: border-width ease-in-out 0.2s;
   cursor: pointer;
 }
 
-.noBulletList li button:hover{
+.noBulletList li button:hover {
   border-width: 4px;
 }
 
-.noBulletList li{
-  margin-top:10px;
+.noBulletList li {
+  margin-top: 10px;
 }
 
-.noBulletList li input{
+.noBulletList li input {
   margin-left: 7px;
   border-radius: 5px;
   border: 4px rgb(19, 168, 168) solid;
   height: 20px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color:rgb(19, 168, 168);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: rgb(19, 168, 168);
   font-weight: 700;
   width: 25%;
-  outline:none;
+  outline: none;
 }
 
-.noBulletList li textarea{
+.noBulletList li textarea {
   margin-left: 4px;
   border-radius: 10px;
   border: 4px rgb(19, 168, 168) solid;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color:rgb(19, 168, 168);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: rgb(19, 168, 168);
   font-weight: 700;
   width: 60%;
   padding: 5px;
   resize: none;
-  outline:none;
+  outline: none;
 }
 
 .noBulletList li textarea::-webkit-scrollbar {
   padding: 5px;
   width: 12px;
-  background-color: #F5F5F5; 
+  background-color: #f5f5f5;
 }
 
 .noBulletList li textarea::-webkit-scrollbar-thumb {
+  cursor: grab;
   border-radius: 10px;
-  background-color: rgb(19, 168, 168); 
+  background-color: rgb(19, 168, 168);
 }
 
 .noBulletList li input::-webkit-input-placeholder,
-.noBulletList li textarea::-webkit-input-placeholder{
-  color:rgb(169, 167, 167);
+.noBulletList li textarea::-webkit-input-placeholder {
+  color: rgb(169, 167, 167);
 }
 
 .noBulletList li input::-moz-placeholder,
-.noBulletList li textarea::-moz-placeholder
-{
-  color:rgb(169, 167, 167);
+.noBulletList li textarea::-moz-placeholder {
+  color: rgb(169, 167, 167);
 }
 
 .noBulletList li input::-ms-placeholder,
-.noBulletList li textarea::-ms-placeholder{
-  color:rgb(169, 167, 167);
+.noBulletList li textarea::-ms-placeholder {
+  color: rgb(169, 167, 167);
 }
 
 .noBulletList li input::placeholder,
-.noBulletList li input::placeholder{
-  color:rgb(169, 167, 167);
+.noBulletList li input::placeholder {
+  color: rgb(169, 167, 167);
 }
 
-.redSpan{
+.redSpan {
   color: rgb(216, 53, 53);
   font-size: 16px;
   font-weight: 800;
 }
 
 @media only screen and (max-width: 600px) {
-  .noBulletList li input{
+  .noBulletList li input {
     width: 60%;
   }
 }
