--- a/Desktop/cvpage/src/components/NavComp/NavComp.module.css
+++ b/Desktop/cvpage/src/components/NavComp/NavComp.module.css
@@ -11,12 +11,12 @@ nav{
   right: 0;
   min-height: 9vh;
   align-items: center;
+  padding: 2px;
 }
 
 .logo{
   object-position: center;
   object-fit: fill;
-  height: 8vh;
   width: 58px;
   margin-left: 5px;
   margin-right: auto;
