--- a/Desktop/cvpage/src/components/NavComp/NavComp.module.css
+++ b/Desktop/cvpage/src/components/NavComp/NavComp.module.css
@@ -9,7 +9,7 @@ nav{
   left: 0;
   top: 0;
   right: 0;
-  min-height: 9vh;
+  min-height: 7vh;
   align-items: center;
   padding: 2px;
 }
@@ -48,6 +48,17 @@ nav > ul > li{
 
 .nav_element:hover{
   text-shadow: 1px 0px 2px rgb(12, 244, 244);
+}
+
+.nav_element.nav_selected:hover{
+  text-shadow: none;
+}
+
+.nav_selected{
+  text-decoration : underline 3px;
+  text-decoration-style: dashed;
+  text-underline-position: under;
+  text-underline-offset: 2px;
 }
 
 @media only screen and (max-width: 600px) {
