--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -76,6 +76,7 @@
 .noBulletList li textarea::-webkit-scrollbar {
   padding: 5px;
   width: 12px;
+  border-radius: 10px;
   background-color: #f5f5f5;
 }
 
