--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -19,6 +19,10 @@
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
+.card > label {
+  cursor: pointer;
+}
+
 .CardElement .tooltiptext {
   visibility: hidden;
   min-width: 7rem;
