--- a/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
+++ b/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
@@ -1,15 +1,22 @@
 .notification{
   position: fixed;
   top: 4vh;
-  left:45%;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: rgb(167, 235, 235);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  color: rgb(19, 168, 168);
+  color: rgb(8, 149, 149);
   font-size: 24px;
   padding: 4px;
-  border:4px rgb(19, 168, 168) solid;
+  border:4px solid;
   border-radius: 5px;
   animation: fade-out 1.7s ease-in 1.8s 1 normal forwards;
+}
+
+@media all and (max-width:450px) {
+  .notification{
+    transform: translateX(-30%);
+  }
 }
 
 @keyframes fade-out{
