--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -110,3 +110,103 @@ div.category_container{
   font-weight: 700;
   flex:1;
 }
+
+body:has(.backdrop){
+  overflow-y: hidden;
+}
+
+.backdrop{
+  position: fixed;
+  top:0;
+  left:0;
+  right: 0;
+  bottom: 0;
+  z-index: 300;
+  background-color: rgba(0, 0, 0, 0.69);
+  padding: 4rem 3rem 3rem;
+  box-sizing: border-box;
+  opacity: 0;
+  -moz-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
+  -webkit-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
+  -o-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
+  animation: background-fade-in .4s ease-in 0s 1 normal forwards;
+}
+
+@keyframes background-fade-in {
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+@media all and (max-width:450px) {
+  .backdrop{
+    padding: 2rem;
+  }
+
+  button.exit_btn{
+    top:0;
+    right: 3px;
+  }
+}
+
+.project_presentation, button.exit_btn{
+  transform: scale(.6);
+  opacity: 0;
+  -webkit-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
+  -moz-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
+  -o-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
+  animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
+}
+
+@keyframes presentation_anim {
+  from{
+    transform: scale(.6);
+    opacity: 0;
+  }
+  to{
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.project_presentation.close_panel, .project_presentation.close_panel ~button.exit_btn{
+  -webkit-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
+  -moz-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
+  -o-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
+  animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
+}
+
+@keyframes presentation_close_anim {
+  from{
+    transform: scale(1);
+    opacity: 1;
+  }
+  to{
+    transform: scale(1) translateY(-1rem);
+    opacity: 0;
+  }
+}
+
+.exit_btn{
+  position: absolute;
+  top: 2rem;
+  right: 1rem;
+  font-size: 2.5rem;
+  border:none;
+  cursor: pointer;
+  background-color: transparent;
+  color:rgb(221, 12, 12);
+  -webkit-text-stroke: .5px rgb(192, 1, 1);
+}
+
+
+.project_presentation{
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 247, 247, 0.826);
+  border-radius: .5rem;
+  border: 4px double rgb(145, 142, 142);
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 1rem;
+}
