--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -20,6 +20,25 @@
 .divRowCentered {
   display: flex;
   align-items: center;
+  line-height: 1rem;
+}
+
+.icon{
+  transform: translateY(2px);
+  margin-right: 3px;
+}
+
+.contact_link, .contact_link:link{
+  text-decoration: none;
+  color:inherit;
+  font-weight: 700;
+  display: inline-block;
+  transform: translateY(2px);
+  transition: text-shadow .4s;
+}
+
+.contact_link:hover{
+  text-shadow: 1px 0px 10px rgb(15, 153, 153);
 }
 
 .noBulletList {
