--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -54,12 +54,17 @@
   border-radius: 5px;
   font-size: 16px;
   margin-left: 10px;
-  transition: border-style ease-in-out 0.4s;
+  transition: all ease-in-out 0.4s;
   cursor: pointer;
 }
 
 .noBulletList li button:hover {
-  border-style: dashed;
+  color:rgb(65, 212, 212);
+  background-color:rgb(8, 122, 122);
+}
+
+.noBulletList li button:active{
+  transform: translateY(8px);
 }
 
 .noBulletList li {
