--- a/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
+++ b/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
@@ -5,7 +5,7 @@
   transform: translateX(-50%);
   background-color: rgb(167, 235, 235);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  color: rgb(8, 149, 149);
+  color: rgb(6, 127, 127);
   font-size: 24px;
   padding: 4px;
   border:4px solid;
@@ -21,6 +21,7 @@
 
 @keyframes fade-out{
   0%{opacity: 100%;}
+  30%{opacity: 100%;}
   100%{opacity: 0%;}
 }
 
