--- a/Desktop/cvpage/src/index.css
+++ b/Desktop/cvpage/src/index.css
@@ -6,10 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(123, 185, 189);
-  display:flex; 
-  flex-direction:column; 
-  justify-content:space-between;
-  gap:50px;
+  display:block;
+}
+
+@media  only screen and (max-width:350px) and (hover:none){
+    body{
+      display: flex;
+    }
 }
 
 body::-webkit-scrollbar {
