--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -202,10 +202,38 @@ body:has(.backdrop){
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 247, 247, 0.826);
+  background-color: rgba(255, 247, 247, 0.8);
   border-radius: .5rem;
-  border: 4px double rgb(145, 142, 142);
+  border: 6px double rgb(8, 122, 122);
   overflow-y: auto;
   overflow-x: hidden;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.project_presentation > h2{
+  text-align: center;
+  margin-bottom: 3rem;
+  font-weight: 800;
+  background-image: linear-gradient(to right,rgb(12, 108, 108),rgb(87, 206, 206));
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.project_presentation .btn_link{
+  align-self: center;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border-radius: 30px;
+  border: none;
+  background-image: linear-gradient(to right,rgb(34, 179, 179),rgb(12, 108, 108));
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  border-radius: 30px;
+  border-bottom: 2px dashed rgb(9, 175, 175);
 }
