--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -123,7 +123,7 @@ body:has(.backdrop){
   bottom: 0;
   z-index: 300;
   background-color: rgba(0, 0, 0, 0.69);
-  padding: 4rem 3rem 3rem;
+  padding: 3rem;
   box-sizing: border-box;
   opacity: 0;
   -moz-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
@@ -141,14 +141,9 @@ body:has(.backdrop){
   .backdrop{
     padding: 2rem;
   }
-
-  button.exit_btn{
-    top:0;
-    right: 3px;
-  }
 }
 
-.project_presentation, button.exit_btn{
+.project_presenation__container{
   transform: scale(.6);
   opacity: 0;
   -webkit-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
@@ -168,7 +163,7 @@ body:has(.backdrop){
   }
 }
 
-.project_presentation.close_panel, .project_presentation.close_panel ~button.exit_btn{
+.project_presenation__container.close_panel{
   -webkit-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
   -moz-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
   -o-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
@@ -186,23 +181,34 @@ body:has(.backdrop){
   }
 }
 
-.exit_btn{
-  position: absolute;
-  top: 2rem;
-  right: 1rem;
+.project_presenation__container{
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  grid-template-rows: 1.6rem minmax(min-content, 94%);
+  height: 100%;
+}
+
+.project_presenation__exit{
+  grid-column: 2;
   font-size: 2.5rem;
-  border:none;
+  padding: 0;
+  margin: 0;
+  line-height: 1.8rem;
+  border: none;
   cursor: pointer;
+  transform: translateX(70%);
   background-color: transparent;
   color:rgb(221, 12, 12);
   -webkit-text-stroke: .5px rgb(192, 1, 1);
 }
 
 .project_presentation{
+  grid-row: 2;
+  grid-column: 1/-1;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 247, 247, 0.8);
+  background-color: rgba(255, 247, 247, 0.81);
   border-radius: .5rem;
   border: 6px double rgb(8, 122, 122);
   overflow-y: auto;
@@ -210,16 +216,35 @@ body:has(.backdrop){
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  z-index: 301;
+}
+
+.current_page_indicator{
+  grid-column: 1/2;
+  grid-row:1/2;
+  transform: translateY(-20%);
+  align-self: flex-start;
+  color:white;
+  padding: .5rem 1rem;
+  line-height: 1.1;
+  background-color: rgb(8, 122, 122);
+  border-radius: 50%;
+  justify-self: flex-start;
+  width: min-content;
+  text-align: center;
+  z-index:302;
+  border: 5px double rgb(5, 93, 93);
 }
 
 .project_presentation > h2{
-  text-align: center;
+  align-self: center;
   margin-bottom: 3rem;
   font-weight: 800;
-  background-image: linear-gradient(to right,rgb(12, 108, 108),rgb(87, 206, 206));
+  color: transparent;
+  background: linear-gradient(to right,rgb(12, 108, 108),rgb(43, 177, 177));
   -webkit-background-clip: text;
   background-clip: text;
-  color: transparent;
+  -webkit-text-fill-color: transparent;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -229,11 +254,17 @@ body:has(.backdrop){
   font-size: 1.2rem;
   font-weight: 600;
   border-radius: 30px;
+  display: block;
   border: none;
   background-image: linear-gradient(to right,rgb(34, 179, 179),rgb(12, 108, 108));
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  border-radius: 30px;
-  border-bottom: 2px dashed rgb(9, 175, 175);
+  padding: .6rem 1rem;
+  color: rgba(255, 255, 255, 0.5);
+  transition: color .6s;
+  position: relative;
+  z-index:320;
+}
+
+.project_presentation .btn_link:hover{
+  color: rgba(255, 255, 255, 0.9);
+  background-image: linear-gradient(to right,rgb(12, 108, 108), rgb(34, 179, 179));
 }
