--- a/Desktop/cvpage/src/components/Footer/Footer.module.css
+++ b/Desktop/cvpage/src/components/Footer/Footer.module.css
@@ -14,13 +14,16 @@ footer{
   border-top-left-radius: 8%;
   border-top-right-radius: 8%;
   display:grid;
-  grid-template-columns: 230px 0.5fr 1fr;
-  text-align:center;
+  grid-template-columns: 230px 1fr;
   align-items:center;
   gap:10px;
 }
 
+.footer p {
+  text-align: center;
+}
+
 .socialMedia{
-  text-align: end;
+  justify-self: end;
 }
 
