--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -52,9 +52,11 @@
   border-color: transparent black transparent transparent;
 }
 
-.CardElement:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+@media  screen and (hover:hover) {
+  .CardElement:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .category_container{
@@ -205,7 +207,7 @@ body:has(.backdrop){
 
 .project_presenation__exit:hover{
   text-shadow: 0 0 5px rgb(192, 1, 1);
-  text-shadow: 1px 1px 2px black, 0 0 1em orange, 0 0 0.2em red;
+  text-shadow: 1px 1px 2px orange, 0 0 1em red, 0 0 0.2em red;
 }
 
 .project_presentation{
