--- a/Desktop/cvpage/src/components/CustomedElements/Button.module.css
+++ b/Desktop/cvpage/src/components/CustomedElements/Button.module.css
@@ -6,6 +6,12 @@
   margin-right: 10px;
 }
 
+@media only screen and (max-width:400px) {
+  .icon{
+    margin-right: 2px;
+  }
+}
+
 .icon:hover{
   box-shadow: rgb(12, 244, 244) 0px 10px 30px -10px;
 }
