--- a/Desktop/cvpage/src/index.css
+++ b/Desktop/cvpage/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(123, 185, 189);
   display:block;
+  overflow-x: hidden;
 }
 
 @media  only screen and (max-width:350px) and (hover:none){
