hiding the tooltip for mobile device

--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -58,7 +58,7 @@
   border-color: transparent black transparent transparent;
 }
 
-@media only screen and (hover:hover) {
+@media only screen and (pointer: fine) {
   .CardElement:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
