--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -23,21 +23,22 @@
   line-height: 1rem;
 }
 
-.icon{
+.icon {
   transform: translateY(2px);
   margin-right: 3px;
 }
 
-.contact_link, .contact_link:link{
+.contact_link,
+.contact_link:link {
   text-decoration: none;
-  color:inherit;
+  color: inherit;
   font-weight: 700;
   display: inline-block;
   transform: translateY(2px);
-  transition: text-shadow .4s;
+  transition: text-shadow 0.4s;
 }
 
-.contact_link:hover{
+.contact_link:hover {
   text-shadow: 1px 0px 10px rgb(15, 153, 153);
 }
 
@@ -59,11 +60,11 @@
 }
 
 .noBulletList li button:hover {
-  color:rgb(65, 212, 212);
-  background-color:rgb(8, 122, 122);
+  color: rgb(65, 212, 212);
+  background-color: rgb(8, 122, 122);
 }
 
-.noBulletList li button:active{
+.noBulletList li button:active {
   transform: translateY(8px);
 }
 
