--- a/Desktop/cvpage/src/components/Projects/Projects.module.css
+++ b/Desktop/cvpage/src/components/Projects/Projects.module.css
@@ -1,28 +1,33 @@
-.cards_container{
-  margin-top:10px;
+.cards_container {
+  margin-top: 10px;
   display: flex;
   flex-wrap: wrap;
-  gap:20px;
+  gap: 20px;
 }
 
-@media only screen and (max-width:465px) {
-  .cards_container{
+@media only screen and (max-width: 465px) {
+  .cards_container {
     justify-content: center;
   }
 }
 
-.CardElement{
+.CardElement {
   position: relative;
   cursor: pointer;
   transition: box-shadow ease-in 0.4s;
 }
 
-.CardElement:hover > div > .category_container{
-  box-shadow: rgba(0, 0, 0, 0.4) 0px -2px 4px, rgba(0, 0, 0, 0.3) 0px -3px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+.CardElement:hover > div > .category_container {
+  box-shadow:
+    rgba(0, 0, 0, 0.4) 0px -2px 4px,
+    rgba(0, 0, 0, 0.3) 0px -3px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.CardElement:hover > .card{
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+.CardElement:hover > .card {
+  box-shadow:
+    rgba(0, 0, 0, 0.19) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .card > label {
@@ -42,8 +47,8 @@
   top: 30%;
   left: 90%;
   border: 1px black solid;
-  cursor:default;
-  opacity:0;
+  cursor: default;
+  opacity: 0;
   transition: opacity 0.9s;
 }
 
@@ -65,7 +70,7 @@
   }
 }
 
-.category_container{
+.category_container {
   height: 2em;
   width: 2em;
   border-radius: 14%;
@@ -76,7 +81,7 @@
   transition: box-shadow ease-in 0.5s;
 }
 
-div.category_container{
+div.category_container {
   padding-left: 2px;
   padding-right: 2px;
   width: auto;
@@ -85,17 +90,17 @@ div.category_container{
   transition: box-shadow ease-in 0.5s;
 }
 
-.column_container{
+.column_container {
   position: absolute;
   top: -12px;
   left: -5px;
-  display:flex;
+  display: flex;
   flex-direction: row;
   width: auto;
   column-gap: 0.4em;
 }
 
-.card{
+.card {
   display: flex;
   flex-direction: column;
   gap: 3px;
@@ -109,24 +114,24 @@ div.category_container{
   transition: box-shadow ease-in 0.4s;
 }
 
-.card img{
+.card img {
   height: 7rem;
   width: 7rem;
 }
 
-.card label{
+.card label {
   font-weight: 700;
-  flex:1;
+  flex: 1;
 }
 
-body:has(.backdrop){
+body:has(.backdrop) {
   overflow-y: hidden;
 }
 
-.backdrop{
+.backdrop {
   position: fixed;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
   z-index: 300;
@@ -134,69 +139,74 @@ body:has(.backdrop){
   padding: 3rem;
   box-sizing: border-box;
   opacity: 0;
-  -moz-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
-  -webkit-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
-  -o-animation: background-fade-in .4s ease-in 0s 1 normal forwards;
-  animation: background-fade-in .4s ease-in 0s 1 normal forwards;
+  -moz-animation: background-fade-in 0.4s ease-in 0s 1 normal forwards;
+  -webkit-animation: background-fade-in 0.4s ease-in 0s 1 normal forwards;
+  -o-animation: background-fade-in 0.4s ease-in 0s 1 normal forwards;
+  animation: background-fade-in 0.4s ease-in 0s 1 normal forwards;
 }
 
 @keyframes background-fade-in {
-  from{opacity: 0;}
-  to{opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-@media all and (max-width:450px) {
-  .backdrop{
+@media all and (max-width: 450px) {
+  .backdrop {
     padding: 2rem;
   }
 }
 
-.project_presenation__container{
-  transform: scale(.6);
+.project_presenation__container {
+  transform: scale(0.6);
   opacity: 0;
-  -webkit-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
-  -moz-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
-  -o-animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
-  animation: presentation_anim .3s ease-in-out .3s 1 normal forwards;
+  -webkit-animation: presentation_anim 0.3s ease-in-out 0.3s 1 normal forwards;
+  -moz-animation: presentation_anim 0.3s ease-in-out 0.3s 1 normal forwards;
+  -o-animation: presentation_anim 0.3s ease-in-out 0.3s 1 normal forwards;
+  animation: presentation_anim 0.3s ease-in-out 0.3s 1 normal forwards;
 }
 
 @keyframes presentation_anim {
-  from{
-    transform: scale(.6);
+  from {
+    transform: scale(0.6);
     opacity: 0;
   }
-  to{
+  to {
     transform: scale(1);
     opacity: 1;
   }
 }
 
-.project_presenation__container.close_panel{
-  -webkit-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
-  -moz-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
-  -o-animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
-  animation: presentation_close_anim .3s ease-in-out 0s 1 normal forwards;
+.project_presenation__container.close_panel {
+  -webkit-animation: presentation_close_anim 0.3s ease-in-out 0s 1 normal
+    forwards;
+  -moz-animation: presentation_close_anim 0.3s ease-in-out 0s 1 normal forwards;
+  -o-animation: presentation_close_anim 0.3s ease-in-out 0s 1 normal forwards;
+  animation: presentation_close_anim 0.3s ease-in-out 0s 1 normal forwards;
 }
 
 @keyframes presentation_close_anim {
-  from{
+  from {
     transform: scale(1);
     opacity: 1;
   }
-  to{
+  to {
     transform: scale(1) translateY(-1rem);
     opacity: 0;
   }
 }
 
-.project_presenation__container{
+.project_presenation__container {
   display: grid;
   grid-template-columns: 1fr min-content;
   grid-template-rows: 1.6rem minmax(min-content, 94%);
   height: 100%;
 }
 
-.project_presenation__exit{
+.project_presenation__exit {
   grid-column: 2;
   font-size: 2.5rem;
   padding: 0;
@@ -206,17 +216,20 @@ body:has(.backdrop){
   cursor: pointer;
   transform: translateX(70%);
   background-color: transparent;
-  color:rgb(221, 12, 12);
-  -webkit-text-stroke: .5px rgb(192, 1, 1);
-  transition: text-shadow .4s;
+  color: rgb(221, 12, 12);
+  -webkit-text-stroke: 0.5px rgb(192, 1, 1);
+  transition: text-shadow 0.4s;
 }
 
-.project_presenation__exit:hover{
+.project_presenation__exit:hover {
   text-shadow: 0 0 5px rgb(192, 1, 1);
-  text-shadow: 1px 1px 2px orange, 0 0 1em red, 0 0 0.2em red;
+  text-shadow:
+    1px 1px 2px orange,
+    0 0 1em red,
+    0 0 0.2em red;
 }
 
-.project_presentation{
+.project_presentation {
   font-size: 1.1rem;
   grid-row: 2;
   grid-column: 1/-1;
@@ -224,7 +237,7 @@ body:has(.backdrop){
   width: 100%;
   height: 100%;
   background-color: rgba(255, 247, 247, 0.81);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: 6px double rgb(8, 122, 122);
   overflow-y: auto;
   overflow-x: hidden;
@@ -234,81 +247,102 @@ body:has(.backdrop){
   z-index: 301;
 }
 
-.project_presentation p{
+.project_presentation p {
   text-indent: 1rem;
   text-align: justify;
   hyphens: auto;
   font-weight: 400;
 }
 
-@media only screen and (min-width:420px){
-  .project_presentation p{
-    hyphens:none;
+@media only screen and (min-width: 420px) {
+  .project_presentation p {
+    hyphens: none;
   }
 }
 
-.presentation_link{
-  text-decoration: none;
-  color:inherit;
+.presentation_link {
+  color: inherit;
   font-weight: 700;
   display: flex;
-  transition: all .4s;
+  transition: all 0.4s;
   margin-left: 1rem;
   margin-right: auto;
   justify-items: center;
+  align-items: center;
+  font-size: 1rem;
 }
 
-.icon_link{
-  display:inline-block;
-  height:100%;
+.presentation_link > a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: inherit;
+}
+
+.icon_link {
+  display: inline-block;
+  height: 1rem;
   width: 24px;
-  background-color:rgb(8, 122, 122);
+  background-color: rgb(8, 122, 122);
   -webkit-mask-image: var(--svg-url);
   mask-image: var(--svg-url);
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
-  -webkit-mask-size: cover;
-  mask-size: cover;
+  -webkit-mask-size: 90%;
+  mask-size: 90%;
+  -webkit-mask-position: center;
+  mask-position: center;
 }
 
-.presentation_link:hover{
+.presentation_link:not(:first-child) {
+  margin-top: 0.5rem;
+}
+
+.presentation_link:hover {
   text-shadow: 1px 0px 10px rgb(15, 153, 153);
 }
 
-.presentation_link:active{
+.presentation_link:active {
   transform: translateY(3px);
 }
 
-.current_page_indicator{
+div:has(.presentation_link) {
+  margin-bottom: 1rem;
+}
+
+.current_page_indicator {
   grid-column: 1/2;
-  grid-row:1/2;
+  grid-row: 1/2;
   transform: translateY(-20%);
   align-self: flex-start;
-  color:white;
-  padding: .5rem 1rem;
+  color: white;
+  padding: 0.5rem 1rem;
   line-height: 1.1;
   background-color: rgb(8, 122, 122);
   border-radius: 50%;
   justify-self: flex-start;
   width: min-content;
   text-align: center;
-  z-index:302;
+  z-index: 302;
   border: 5px double rgb(5, 93, 93);
 }
 
-.project_presentation > h2{
+.project_presentation > h2 {
   align-self: center;
   margin-bottom: 3rem;
   font-weight: 800;
   color: transparent;
-  background: linear-gradient(to right bottom,rgb(12, 108, 108),rgb(43, 177, 177));
+  background: linear-gradient(
+    to right bottom,
+    rgb(12, 108, 108),
+    rgb(43, 177, 177)
+  );
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.project_presentation .btn_link{
+.project_presentation .btn_link {
   align-self: center;
   cursor: pointer;
   font-size: 1.2rem;
@@ -316,15 +350,23 @@ body:has(.backdrop){
   border-radius: 30px;
   display: block;
   border: none;
-  background-image: linear-gradient(to right,rgb(34, 179, 179),rgb(12, 108, 108));
-  padding: .6rem 1rem;
+  background-image: linear-gradient(
+    to right,
+    rgb(34, 179, 179),
+    rgb(12, 108, 108)
+  );
+  padding: 0.6rem 1rem;
   color: rgba(255, 255, 255, 0.5);
-  transition: color .6s;
+  transition: color 0.6s;
   position: relative;
-  z-index:320;
+  z-index: 320;
 }
 
-.project_presentation .btn_link:hover{
+.project_presentation .btn_link:hover {
   color: rgba(255, 255, 255, 0.9);
-  background-image: linear-gradient(to right,rgb(12, 108, 108), rgb(34, 179, 179));
+  background-image: linear-gradient(
+    to right,
+    rgb(12, 108, 108),
+    rgb(34, 179, 179)
+  );
 }
