--- a/Desktop/cvpage/src/index.css
+++ b/Desktop/cvpage/src/index.css
@@ -1,30 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(123, 185, 189);
-  display:block;
+  display: block;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 
-@media  only screen and (max-width:350px) and (hover:none){
-    body{
-      display: flex;
-    }
+@media only screen and (max-width: 350px) and (hover: none) {
+  body {
+    display: flex;
+  }
 }
 
 body::-webkit-scrollbar {
   padding: 5px;
   width: 15px;
   border-radius: 10px;
-  background-color: #F5F5F5; 
+  background-color: #f5f5f5;
 }
 
 body::-webkit-scrollbar-thumb {
-  border:3px rgb(13, 132, 132) solid;
+  border: 3px rgb(13, 132, 132) solid;
   border-radius: 10px;
-  background-color: rgb(19, 168, 168); 
+  background-color: rgb(19, 168, 168);
 }
