--- a/Desktop/cvpage/src/components/CV/CV.module.css
+++ b/Desktop/cvpage/src/components/CV/CV.module.css
@@ -65,6 +65,7 @@
     rgba(0, 0, 0, 0.09) 0px 8px 4px,
     rgba(0, 0, 0, 0.09) 0px 16px 8px,
     rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  filter: drop-shadow(2px 3px 7px black);
 }
 
 .description {
