--- a/Desktop/cvpage/src/components/CV/CV.module.css
+++ b/Desktop/cvpage/src/components/CV/CV.module.css
@@ -55,6 +55,7 @@
   height: 20rem;
   width: 14rem;
   padding-right: 0;
+  border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 15%;
   box-shadow:
     rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
