--- a/Desktop/cvpage/src/components/CV/CV.module.css
+++ b/Desktop/cvpage/src/components/CV/CV.module.css
@@ -44,6 +44,15 @@
   font-weight: 700;
 }
 
+.no-margin-y{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.no-margin-top{
+  margin-top: 0px;
+}
+
 .listSquare {
   list-style-type: square;
 }
