--- a/Desktop/cvpage/src/components/Contact/Contact.module.css
+++ b/Desktop/cvpage/src/components/Contact/Contact.module.css
@@ -57,9 +57,10 @@
   margin-left: 10px;
   transition: all ease-in-out 0.4s;
   cursor: pointer;
+  outline: none;
 }
 
-.noBulletList li button:hover {
+.noBulletList li button:hover, .noBulletList li button:focus {
   color: rgb(65, 212, 212);
   background-color: rgb(8, 122, 122);
 }
@@ -80,8 +81,15 @@
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgb(19, 168, 168);
   font-weight: 700;
-  width: 25%;
+  width: 35%;
   outline: none;
+  outline:none;
+  transition: all .3s;
+}
+
+.noBulletList li input:focus, .noBulletList li textarea:focus{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  border-color: rgb(14, 220, 243) ;
 }
 
 .noBulletList li textarea {
