--- a/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
+++ b/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
@@ -8,11 +8,15 @@
     rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   color: rgb(6, 127, 127);
-  font-size: 24px;
-  padding: 4px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 1.8rem;
+  padding: .5rem 2rem;
   border: 4px solid;
-  border-radius: 5px;
-  animation: fade-out 1.7s ease-in 1.8s 1 normal forwards;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  animation: fade-out 2s ease-in 2s 1 normal forwards;
 }
 
 @media all and (max-width: 450px) {
