--- a/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
+++ b/Desktop/cvpage/src/components/Notification/TemporalNotification.module.css
@@ -16,6 +16,7 @@
   border-radius: 1rem;
   display: flex;
   align-items: center;
+  justify-content: center;
   animation: fade-out 2s ease-in 2s 1 normal forwards;
 }
 
